--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
   ],
   "require": {
     "php": ">=5.3.0",
-    "illuminate/support": "~5.2",
-    "illuminate/view": "~5.2"
+    "illuminate/support": "5.2",
+    "illuminate/view": "5.2"
   },
   "autoload": {
     "psr-0": {
